--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 node_modules/
+.DS_Store
 documentation.txt
+
+#Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
